--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <!-- displays site properly based on user's device -->
 
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png" />
+    <link rel="stylesheet" href="css/styles.css" type="text/css" />
 
     <title>Frontend Mentor | Recipe page</title>
 
@@ -24,15 +25,13 @@
     <main>
       <div class="container">
         <div class="image-container">
-          <img src="#" alt="recipe image" />
+          <img src="assets/images/image-omelette.jpeg" alt="recipe image" />
         </div>
         <div class="description">
           <h2>Simple Omelette Recipe</h2>
-          <p>
-            An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to
-            perfection, optionally filled with your choice of cheese, vegetables, or meats.
-          </p>
-          <div class="preparation">
+          <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs</p>
+          <p>cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
+          <div class="preparation-container">
             <h5>Preparation time</h5>
             <ul class="preparation-list">
               <li>Total: Approximately 10 minutes</li>
@@ -51,29 +50,31 @@
             <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
           </ul>
         </div>
+        <hr />
         <div class="instructions">
           <h3>Instructions</h3>
           <ol class="instructions-list">
             <li>
-              Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. You can
-              add a tablespoon of water or milk for a fluffier texture.
+              <b>Beat the eggs</b>: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed.
+              You can add a tablespoon of water or milk for a fluffier texture.
             </li>
-            <li>Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.</li>
+            <li><b>Heat the pan</b>: Place a non-stick frying pan over medium heat and add butter or oil.</li>
             <li>
               Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the
               eggs evenly coat the surface.
             </li>
             <li>
-              Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the
-              middle, sprinkle your chosen fillings over one half of the omelette.
+              <b>Add fillings (optional)</b>: When the eggs begin to set at the edges but are still slightly runny in
+              the middle, sprinkle your chosen fillings over one half of the omelette.
             </li>
             <li>
-              Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the fillings.
-              Let it cook for another minute, then slide it onto a plate.
+              <b>Fold and serve</b>: As the omelette continues to cook, carefully lift one edge and fold it over the
+              fillings. Let it cook for another minute, then slide it onto a plate.
             </li>
-            <li>Enjoy: Serve hot, with additional salt and pepper if needed.</li>
+            <li><b>Enjoy</b>: Serve hot, with additional salt and pepper if needed.</li>
           </ol>
         </div>
+        <hr />
         <div class="nutrition">
           <h3>Nutrition</h3>
           <p>The table below shows nutritional values per serving without the additional fillings.</p>
