Updated index.html file and added media queries to CSS file

--- a/index.html
+++ b/index.html
@@ -29,77 +29,81 @@
   </head>
   <body>
     <main>
-      <div class="container outfit-font">
+      <div class="recipe-container">
         <div class="image-container">
           <img src="assets/images/image-omelette.jpeg" alt="recipe image" />
         </div>
-        <div class="description">
-          <h1 id="title" class="young-serif-regular">Simple Omelette Recipe</h1>
-          <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs</p>
-          <p>cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
-          <div class="preparation-container">
-            <b>Preparation time</b>
-            <ul class="preparation-list">
-              <li>Total: Approximately 10 minutes</li>
-              <li>Preparation: 5 minutes</li>
-              <li>Cooking: 5 minutes</li>
+        <div class="recipe-details-container outfit-font">
+          <div class="description">
+            <h1 id="title" class="young-serif-regular">Simple Omelette Recipe</h1>
+            <p>
+              An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to
+              perfection, optionally filled with your choice of cheese, vegetables, or meats.
+            </p>
+            <div class="preparation-container">
+              <b>Preparation time</b>
+              <ul class="preparation-list">
+                <li>Total: Approximately 10 minutes</li>
+                <li>Preparation: 5 minutes</li>
+                <li>Cooking: 5 minutes</li>
+              </ul>
+            </div>
+          </div>
+          <div class="ingredients">
+            <h3 class="young-serif-regular">Ingredients</h3>
+            <ul class="ingredients-list">
+              <li>2-3 large eggs</li>
+              <li>Salt, to taste</li>
+              <li>Pepper, to taste</li>
+              <li>1 tablespoon of butter or oil</li>
+              <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
             </ul>
           </div>
-        </div>
-        <div class="ingredients">
-          <h3 class="young-serif-regular">Ingredients</h3>
-          <ul class="ingredients-list">
-            <li>2-3 large eggs</li>
-            <li>Salt, to taste</li>
-            <li>Pepper, to taste</li>
-            <li>1 tablespoon of butter or oil</li>
-            <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
-          </ul>
-        </div>
-        <div class="instructions">
-          <h3 class="young-serif-regular">Instructions</h3>
-          <ol class="instructions-list">
-            <li>
-              <b>Beat the eggs</b>: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed.
-              You can add a tablespoon of water or milk for a fluffier texture.
-            </li>
-            <li><b>Heat the pan</b>: Place a non-stick frying pan over medium heat and add butter or oil.</li>
-            <li>
-              Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the
-              eggs evenly coat the surface.
-            </li>
-            <li>
-              <b>Add fillings (optional)</b>: When the eggs begin to set at the edges but are still slightly runny in
-              the middle, sprinkle your chosen fillings over one half of the omelette.
-            </li>
-            <li>
-              <b>Fold and serve</b>: As the omelette continues to cook, carefully lift one edge and fold it over the
-              fillings. Let it cook for another minute, then slide it onto a plate.
-            </li>
-            <li><b>Enjoy</b>: Serve hot, with additional salt and pepper if needed.</li>
-          </ol>
-        </div>
-        <div class="nutrition">
-          <h3 class="young-serif-regular">Nutrition</h3>
-          <p>The table below shows nutritional values per serving without the additional fillings.</p>
-          <table class="nutrition-table">
-            <tr>
-              <td>Calories</td>
-              <td class="young-serif-regular">277kcal</td>
-            </tr>
-            <tr>
-              <td>Carbs</td>
-              <td class="young-serif-regular">0g</td>
-            </tr>
-            <tr>
-              <td>Protein</td>
-              <td class="young-serif-regular">20g</td>
-            </tr>
-            <tr>
-              <td>Fat</td>
-              <td class="young-serif-regular">22g</td>
-            </tr>
-          </table>
+          <div class="instructions">
+            <h3 class="young-serif-regular">Instructions</h3>
+            <ol class="instructions-list">
+              <li>
+                <b>Beat the eggs</b>: In a bowl, beat the eggs with a pinch of salt and pepper until they are well
+                mixed. You can add a tablespoon of water or milk for a fluffier texture.
+              </li>
+              <li><b>Heat the pan</b>: Place a non-stick frying pan over medium heat and add butter or oil.</li>
+              <li>
+                Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the
+                eggs evenly coat the surface.
+              </li>
+              <li>
+                <b>Add fillings (optional)</b>: When the eggs begin to set at the edges but are still slightly runny in
+                the middle, sprinkle your chosen fillings over one half of the omelette.
+              </li>
+              <li>
+                <b>Fold and serve</b>: As the omelette continues to cook, carefully lift one edge and fold it over the
+                fillings. Let it cook for another minute, then slide it onto a plate.
+              </li>
+              <li><b>Enjoy</b>: Serve hot, with additional salt and pepper if needed.</li>
+            </ol>
+          </div>
+          <div class="nutrition">
+            <h3 class="young-serif-regular">Nutrition</h3>
+            <p>The table below shows nutritional values per serving without the additional fillings.</p>
+            <table class="nutrition-table">
+              <tr>
+                <td>Calories</td>
+                <td class="young-serif-regular">277kcal</td>
+              </tr>
+              <tr>
+                <td>Carbs</td>
+                <td class="young-serif-regular">0g</td>
+              </tr>
+              <tr>
+                <td>Protein</td>
+                <td class="young-serif-regular">20g</td>
+              </tr>
+              <tr>
+                <td>Fat</td>
+                <td class="young-serif-regular">22g</td>
+              </tr>
+            </table>
+          </div>
         </div>
       </div>
     </main>
